[metadata]
name = praise
author = Brandon Dube
author-email = brandondube@gmail.com
description = contemporary forward-reverse / iterative transform phase retrieval algorithms
long-description = file: README.md
license = MIT
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
zip_safe = true
include_package_data = true
packages = praise
python_requires = >= 3.6
tests_require = pytest
test_suite = tests
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
install_requires =
    numpy
    scipy

[options.packages.find]
exclude = tests/, docs

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
